--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 body{
     background-color: salmon;
+    background: linear-gradient(to left, rgb(41, 121, 167), rgb(3, 3, 98));
+}
+
+.modal-content{
+    opacity: 0.8;
+}
+.modal-content:hover{
+    opacity: 0.9;
 }
